Arreglar package en clases trasladadas y agregar README